--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -21,3 +21,11 @@
   display: inline-block;
   padding: 20px;
 }
+
+.flagged {
+  background-color: rgba(255, 140, 0, 0.726);
+}
+
+.unflagged {
+  background-color: rgba(0, 128, 0, 0.671);
+}
