--- a/src/components/Admin/Table.css
+++ b/src/components/Admin/Table.css
@@ -1,7 +1,26 @@
 .root {
-    width: '100%',
+    width: 100%;
+    min-width: 750px;
 }
 
 .table {
-    min-width: 750,
+    min-width: 750px;
+}
+
+.th {
+    background-color: black;
+    color: white !important;
+    font-size: 1em  !important;
+}
+
+.flagged {
+  background-color: rgba(255, 140, 0, 0.726);
+}
+
+.unflagged {
+  background-color: rgba(0, 128, 0, 0.671);
+}
+
+.button {
+    margin: 5px !important;
 }
